--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=192.168.0.13:3486/capelania?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://192.168.0.13:3486/capelania?CreateDatabaseIfNotExists=true
 spring.datasource.username=root
 spring.datasource.password=TgiIHZpZXdCb3g9IjAgMCAx
 
