--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://192.168.0.13:3486/capelania?CreateDatabaseIfNotExists=true
 spring.datasource.username=root
-spring.datasource.password=TgiIHZpZXdCb3g9IjAgMCAx
+spring.datasource.password=123456
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
